--- a/deb_package/DEBIAN/control
+++ b/deb_package/DEBIAN/control
@@ -1,6 +1,6 @@
 Package: coppelia-sim-edu
 Version: 4.0.0
-Installed-Size: 
+Installed-Size: 475922
 Maintainer: Crash and Eddie <crash.eddie123@gmail.com>
 Section: science
 Architecture: amd64
